--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -26,9 +26,9 @@
   font-size: calc(10px + 2vmin);
   color: #169976;
 }
-.Text {
-  margin-top: -70px;
-}
+/*.Text {
+  margin-top: -70px;}*/
+
 .App-link {
   color: #169976;
 }
