--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,7 +7,7 @@
   pointer-events: none;
   width: 40vmin;
   align-content: center;
-  margin-top: -100px;
+  margin-top: -50px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -26,11 +26,13 @@
   font-size: calc(10px + 2vmin);
   color: #169976;
 }
-/*.Text {
-  margin-top: -70px;}*/
+.Text {
+  margin-top: -10px;
+}
 
 .App-link {
   color: #169976;
+  margin-top: -10px;
 }
 
 /*@keyframes App-logo-spin {
