--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,12 +27,15 @@
   color: #169976;
 }
 .Text {
+  font-size: 40px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin-top: -10px;
 }
 
 .App-link {
   color: #169976;
   margin-top: -10px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 /*@keyframes App-logo-spin {
